@@ -91,6 +91,11 @@ if(NOT CMAKE_CROSSCOMPILING)
 	add_feature_info("Use assets from source directory (SOURCE_ASSETS)" SOURCE_ASSETS "")
 endif()
 
+cmake_dependent_option(PROXY_STYLE "" OFF "CLIENT" OFF)
+add_feature_info(
+	"Use proxy style to fix dark theme contrasts - only needed if not patching Qt, breaks on some non-English Windows versions (PROXY_STYLE)"
+	PROXY_STYLE "")
+
 # Feature info will be emitted later once it is clear whether or not these
 # features could actually be enabled
 option(CLANG_TIDY "Automatically enable Clang-Tidy" OFF)
